samples/_failures_safe/1761161917_e53b84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81e68a35.c: In function ‘main’:
./samples/SAFE/__tmp_81e68a35.c:163:27: error: ‘analy’ undeclared (first use in this function); did you mean ‘analyzer’?
  163 |         cleanup_analyzer(&analy
      |                           ^~~~~
      |                           analyzer
./samples/SAFE/__tmp_81e68a35.c:163:27: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_81e68a35.c:163:32: error: expected ‘)’ at end of input
  163 |         cleanup_analyzer(&analy
      |                         ~      ^
      |                                )
./samples/SAFE/__tmp_81e68a35.c:163:9: error: expected declaration or statement at end of input
  163 |         cleanup_analyzer(&analy
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_81e68a35.c:163:9: error: expected declaration or statement at end of input
